applications/pymp/pymp_redis/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pymp-redis
  name: pymp-redis
  namespace: pymp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pymp-redis
  template:
    metadata:
      labels:
        app: pymp-redis
        redis: readwrite
    spec:
      containers:
      - name: pymp-redis
        image: redis:latest
        command: ["redis-server", "--port", "6379"]
        imagePullPolicy: Always
