applications/pymp/pymp_redis/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pymp-redis-allow
  namespace: pymp
spec:
  podSelector:
    matchLabels:
      app: pymp-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pymp-server-media-registry
    ports:
    - protocol: TCP
      port: 6379
